# tanu

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
benches/: db_benchmark.rs
docs/: ARCHITECTURE.md  CODE_REFACTOR_PROMPT.md  adr.md  roadmap.md
plugins-demo/: demo-plugin.rs
scripts/: release.sh
src/: lib.rs  main.rs
src/app/: mod.rs  terminal.rs
src/audio/: backend.rs  decoder.rs  eq.rs  flac_source.rs  mod.rs  replaygain.rs  viz.rs
src/browser/: mod.rs
src/commands/: mod.rs
src/config/: mod.rs
src/core/: id.rs  mod.rs  traits.rs
src/database/: migrations.rs  mod.rs  queries.rs
src/events/: bus.rs  mod.rs
src/i18n/: mod.rs
src/input/: mod.rs
src/mouse/: mod.rs
src/player/: mod.rs
src/playlist/: mod.rs
src/plugins/: mod.rs
src/plugins/builtin/: discord.rs  lyrics.rs  mod.rs  scrobbler.rs
src/plugins/wasm/: mod.rs
src/queue/: mod.rs
src/search/: mod.rs
src/services/: mod.rs
src/theme/: mod.rs
src/ui/: layout.rs  mod.rs
src/widgets/: album_art.rs  browser_view.rs  command_bar.rs  context_menu.rs  dir_picker.rs  equalizer.rs  library_view.rs  menu_bar.rs  mod.rs  oscilloscope.rs  playlist_view.rs  popup.rs  progress_bar.rs  queue_view.rs  search_bar.rs  seek_bar.rs  status_bar.rs  table.rs  tabs.rs  tanu_art.txt  tree.rs
wit/: tanu.wit
