[package]
name = "tanu"
version = "0.1.0"
edition = "2021"
description = "A modern terminal music player inspired by cmus"
authors = ["Tanu contributors"]
license = "MIT"
repository = "https://github.com/tanu-org/tanu"

[lib]
name = "tanu"
path = "src/lib.rs"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Audio
symphonia = { version = "0.5", features = ["all"] }
rodio = "0.19"

# Metadata
lofty = "0.21"

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab", "column_decltype"] }

# Filesystem indexing
walkdir = "2"
notify = { version = "7", features = ["macos_kqueue"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
parking_lot = "0.12"
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4", "v5"] }
dirs = "5"
once_cell = "1"
bitflags = "2"
log = "0.4"
chrono = "0.4"
regex = "1"

# Fuzzy matching for search
nucleo = "0.5"
lru = "0.12"

# HTTP client for plugins (Last.fm, lyrics, etc.)
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

# WASM runtime for plugins (sandboxed extensibility)
wasmtime = { version = "28", optional = true }
wasmtime-wasi = { version = "28", optional = true }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }

[features]
default = []
http-plugins = ["reqwest"]
wasm-plugins = ["wasmtime", "wasmtime-wasi"]

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
pretty_assertions = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
rstest = "0.23"
tokio-test = "0.4"

[[bench]]
name = "db_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
